# Semantic_inflation

./: .gitignore  README.md  pyproject.toml
assets/dicts/: aspiration_markers.txt  corp_suffixes.txt  environment_tokens.txt  kpi_labels.txt  kpi_units.txt
configs/: default.toml  pipeline.toml  pipeline_full_2010_2023.toml
data/: README.md
data/fixtures/: echo_sample.csv  filings_index.csv  ghgrp_sample.csv  sample_filing.html
docs/: research_pipeline_commands.md
semantic_inflation/: __main__.py  cli.py  config.py  paths.py
semantic_inflation/epa/: __init__.py  frs.py
semantic_inflation/net/: __init__.py  download.py
semantic_inflation/pipeline/: __init__.py  context.py  doctor.py  downloads.py  echo.py  features.py  ghgrp.py  io.py  io_utils.py  linkage.py  models.py  panel.py  parent_to_cik.py  qc.py  run_all.py  runner.py  sec.py  sec_index.py  state.py  usaspending.py
semantic_inflation/resources/: dictionaries_v1.toml
semantic_inflation/sec/: __init__.py  universe.py
semantic_inflation/text/: clean_html.py  dictionaries.py  features.py  sentence_split.py
tests/: test_clean_html.py  test_integration_downloads.py  test_pipeline_doctor.py  test_pipeline_run_all.py  test_text_features.py
