[project]
name = "semantic-inflation"
version = "0.1.0"
description = "Pipeline for measuring semantic inflation in climate disclosures."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4",
  "duckdb",
  "httpx",
  "linearmodels",
  "lxml",
  "matplotlib",
  "pandas",
  "pyarrow",
  "pydantic-settings",
  "pyxlsb",
  "python-dotenv",
  "pyyaml",
  "rapidfuzz",
  "regex",
  "scikit-learn",
  "statsmodels",
  "tenacity",
  "tqdm",
]

[project.scripts]
semantic-inflation = "semantic_inflation.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_inflation"]

[tool.ruff]
line-length = 100

[tool.uv]
dev-dependencies = [
  "pytest",
  "ruff",
]
